# subspace

./: .gitignore  Cargo.toml  README.md  justfile  rust-toolchain.toml
.cargo/: config.toml
assets/: SG-Asset.txt
assets/Flat_Game_UI_by_sgasset/Health_bar/: Health_bar.ai  Health_bar_copy.eps
src/: main.rs  test_scene.rs
src/common/: asset_loader.rs  despawn.rs  lifetime.rs  mod.rs  prelude.rs  state.rs
src/game/: asteroids.rs  docking.rs  gamestate.rs  gravity.rs  health.rs  missile.rs  mod.rs  planet.rs  playership.rs  prelude.rs  radar_camera.rs  spaceship.rs  station.rs  z_ordering.rs
src/game/cloud/: mod.rs
src/game/detection/: contacts.rs  emission.rs  mod.rs  sensor.rs
src/game/effect/: effect_event.rs  mod.rs
src/game/effect/effect_types/: effect_electricity.rs  mod.rs
src/ui/: debug.rs  mod.rs
