cargo-features = ["codegen-backend"]

[package]
name = "subspace"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.16", features = ["wayland", "dynamic_linking"] }
bevy_egui = "0.36"
avian2d = "0.3"
iyes_perf_ui = "0.5"
rand = "0.9"
log = { version = "*", features = [
  "max_level_debug",
  "release_max_level_warn",
] }

# INFO: dynamic_linking 
# Shipping your game with dynamic linking enabled is not recommended
# because it requires you to include libbevy_dylib alongside your game,
# it prevents certain optimizations, and can increase the size of your game.
# If you remove the dynamic_linking feature, your game executable can run standalone.

[profile.dev]
codegen-backend = "cranelift"
opt-level = 0

[profile.dev.package."*"]
codegen-backend = "llvm"
opt-level = 3
